--- a/minesweeper-gui/src/style.css
+++ b/minesweeper-gui/src/style.css
@@ -3,10 +3,10 @@ container {
 }
 
 button.cell {
-  border-radius: 50px;
+  /* border-radius: 50px; */
   padding-left: 10;
   padding-right: 10;
-
+  margin: 2px 2px 2px 2px;
 }
 
 button.cell.open {
