--- a/vite-minesweeper/src/components/Cell/Cell.module.css
+++ b/vite-minesweeper/src/components/Cell/Cell.module.css
@@ -1,9 +1,10 @@
 .container {
   border-radius: 20px;
-  width: 50px;
-  height: 50px;
+  width: 30px;
+  height: 30px;
   /* padding: 1rem; */
   justify-content: center;
+  font-size: 0.8em;
 }
 
 .closed {
