handle game states

--- a/vite-minesweeper/src/App.css
+++ b/vite-minesweeper/src/App.css
@@ -12,9 +12,10 @@
 }
 
 .gameOver {
-    background-color: lightgray;
+  /* background-color: lightgray; */
+  opacity: 50%;
 }
 
 .newGame {
-    margin-top: 20px;
+  margin-top: 20px;
 }
