--- a/vite-minesweeper/src/App.css
+++ b/vite-minesweeper/src/App.css
@@ -1,7 +1,7 @@
 #root {
-  max-width: 1280px;
+  /* max-width: 1280px; */
   margin: 0 auto;
-  padding: 2rem;
+  /* padding: 2rem; */
   text-align: center;
 }
 
@@ -18,4 +18,7 @@
 
 .newGame {
   margin-top: 20px;
+  background-color: darkcyan;
+  color: white;
 }
+
