--- a/minesweeper-gui/src/style.css
+++ b/minesweeper-gui/src/style.css
@@ -1,45 +1,31 @@
 container {
-  border-radius: 50px;
+  border-radius: 80%;
 }
 
 .cell {
-  border-radius: 50px;
-  padding-left: 10;
-  padding-right: 10;
-  margin: 2px 2px 2px 2px;
+  border-radius: 80%;
+  /* padding-left: 10; */
+  /* padding-right: 10; */
+  /* margin: 2px 2px 2px 2px; */
+  /* min-height: 35px; */
+  /* min-width: 35px; */
 }
 
 .open {
-  background-color: whitesmoke;  
+  background-color: whitesmoke;
 }
 
 .exposed {
-  background-color: whitesmoke;  
+  background-color: whitesmoke;
 }
 
 .flagged {
-  background-color: lightgray;  
-}
-
-.closed {
-  background-color: slategray;  
-}
-
-/* button.cell.open {
-  background-color: whitesmoke;
-}
-
-button.cell.exposed {
-  background-color: whitesmoke;
-}
-
-button.cell.flagged {
   background-color: lightgray;
 }
 
-button.cell.closed {
+.closed {
   background-color: slategray;
-} */
+}
 
 label.win {
   font-weight: bold;
@@ -61,4 +47,8 @@ status_dialog {
   background-color: darkslategray;
   color: white;
   border-radius: 20px;
+}
+
+.restart {
+  margin-bottom: 10px
 }
