--- a/vite-minesweeper/src/index.css
+++ b/vite-minesweeper/src/index.css
@@ -1,9 +1,5 @@
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-
+  font-family: Arial, Helvetica, sans-serif;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
@@ -41,8 +37,8 @@ h1 {
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
+  /* padding: 0.6em 1.2em; */
+  font-size: 1rem;
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
@@ -68,7 +64,7 @@ button:focus-visible {
     color: #747bff;
   } */
 
-  /* button {
+  button {
     background-color: #f9f9f9;
-  } */
+  }
 }
