--- a/vite-minesweeper/src/App.css
+++ b/vite-minesweeper/src/App.css
@@ -1,6 +1,7 @@
 #root {
   margin: 0 auto;
   text-align: center;
+  font-size: 14px;
 }
 
 .board {
@@ -27,4 +28,8 @@ span {
   display: flex;
   justify-content: space-between;
   margin-bottom: 10px;
+  background-image: linear-gradient(to right, black, slategray, black);
+  color: white;
+  padding: 5px;
+  border-radius: 8px;
 }
