--- a/vite-minesweeper/src/components/Cell/Cell.module.css
+++ b/vite-minesweeper/src/components/Cell/Cell.module.css
@@ -1,10 +1,11 @@
 .container {
-  border-radius: 20px;
+  /* border-radius: 20px; */
   width: 25px;
   height: 25px;
   padding: 0;
   justify-content: start;
   font-size: 0.8em;
+  box-shadow: -2px -2px rgba(255, 255, 255, 0.856), 2px 2px gray;
 }
 
 .closed {
@@ -13,6 +14,9 @@
 
 .open {
   background-color: white;
+  box-shadow: none;
+  font-weight: bold;
+  font-size: 14px;
 }
 
 .exposed {
@@ -27,4 +31,20 @@
   .container {
     color: white;
   }
+}
+
+.one {
+    color: blue
+}
+
+.two {
+    color: green
+}
+
+.three {
+    color: purple
+}
+
+.four {
+    color: red
 }
