--- a/vite-minesweeper/src/components/Cell/Cell.module.css
+++ b/vite-minesweeper/src/components/Cell/Cell.module.css
@@ -8,6 +8,10 @@
   box-shadow: -2px -2px rgba(255, 255, 255, 0.856), 2px 2px gray;
 }
 
+.container:active {
+    box-shadow: none;
+}
+
 .closed {
   background-color: lightgray;
 }
