--- a/vite-minesweeper/src/App.css
+++ b/vite-minesweeper/src/App.css
@@ -9,6 +9,8 @@
   grid-template-columns: repeat(20, 1fr);
   gap: 5px;
   background-color: whitesmoke;
+  padding: 5px;
+  border-radius: 8px;
 }
 
 .gameOver {
@@ -21,17 +23,16 @@
   color: white;
   border-radius: 8px;
   box-shadow: 2px 2px slategray;
-  /* box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19); */
   font-size: 14px;
   opacity: .6;
 }
 
 .newGame:hover {
-    opacity: 1;
+  opacity: 1;
 }
 
 .newGame:active {
-    box-shadow: none;
+  box-shadow: none;
 }
 
 span {
