--- a/minesweeper-gui/src/style.css
+++ b/minesweeper-gui/src/style.css
@@ -1,5 +1,7 @@
 container {
   border-radius: 8px;
+  min-width: 25px;
+  min-height: 25px;
 }
 
 .cell {
@@ -12,10 +14,14 @@ container {
 
 .exposed {
   background-color: whitesmoke;
+  font-weight: bold;
+  color: red;
 }
 
 .flagged {
   background-color: lightgray;
+  color: yellow;
+  font-weight: bold;
 }
 
 .closed {
@@ -34,10 +40,10 @@ label.lose {
 
 grid {
   padding: 15px 15px 15px 15px;
-  background-color: whitesmoke;
+  background-color: white;
 }
 
-status_dialog {
+.status_dialog {
   padding: 15px 15px 15px 15px;
   background-color: darkslategray;
   color: white;
@@ -45,5 +51,14 @@ status_dialog {
 }
 
 .restart {
-  margin-bottom: 10px
+  margin-bottom: 10px;
 }
+
+.header {
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
+/* .time {
+  min-width: 15rem;
+} */
