--- a/minesweeper-gui/src/style.css
+++ b/minesweeper-gui/src/style.css
@@ -1,31 +1,45 @@
 container {
-  border-radius: 8px;
   min-width: 25px;
   min-height: 25px;
+  padding: 0;
 }
 
 .cell {
-  border-radius: 8px;
+  border: 0;
+}
+
+.cell:active {
+    box-shadow: none;
+}
+
+.container:hover {
+    opacity: 0.8;
+}
+
+.cell:hover {
+    opacity: 0.8;
 }
 
 .open {
-  background-color: whitesmoke;
+  background-image: image(white);
+  box-shadow: 0;
 }
 
 .exposed {
-  background-color: whitesmoke;
+  background-image: image(whitesmoke);
   font-weight: bold;
   color: red;
 }
 
 .flagged {
-  background-color: lightgray;
+  background-image: image(lightgray);
   color: yellow;
   font-weight: bold;
 }
 
 .closed {
-  background-color: slategray;
+  background-image: image(lightgray);
+  box-shadow: 2px 2px gray;
 }
 
 label.win {
@@ -40,7 +54,7 @@ label.lose {
 
 grid {
   padding: 15px 15px 15px 15px;
-  background-color: white;
+  background-color: whitesmoke;
 }
 
 .status_dialog {
@@ -57,8 +71,5 @@ grid {
 .header {
   margin-left: 15px;
   margin-right: 15px;
+  font-size: 14px;
 }
-
-/* .time {
-  min-width: 15rem;
-} */
