--- a/minesweeper-gui/src/style.css
+++ b/minesweeper-gui/src/style.css
@@ -107,7 +107,7 @@ grid {
 
 .winHistory {
     font-size: 16px;
-    background-color: lightgray;
+    background-image: linear-gradient(to right, wheat, lightgray);
     color: black;
     border-radius: 8px;
     padding: 10px;
@@ -122,6 +122,8 @@ grid {
 
 .winHistoryRank {
     font-size: 20px;
+    min-width: 40px;
+    text-align: end;
     color: white;
 }
 
