--- a/vite-minesweeper/src/App.css
+++ b/vite-minesweeper/src/App.css
@@ -25,10 +25,11 @@
   box-shadow: 2px 2px slategray;
   font-size: 14px;
   opacity: .6;
+  margin-right: 20px;
 }
 
 .buttons:hover {
- opacity: 1;
+  opacity: 1;
 }
 
 .newGame:hover {
@@ -57,10 +58,9 @@ span {
 .boardContainer {
   min-height: 615px;
   flex: 1;
-  /* min-width: 810px; */
 }
 
 .buttonBar {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
 }
