--- a/vite-minesweeper/src/components/Cell/Cell.module.css
+++ b/vite-minesweeper/src/components/Cell/Cell.module.css
@@ -1,6 +1,6 @@
 .container {
-  width: 25px;
-  height: 25px;
+  width: 35px;
+  height: 35px;
   padding: 0;
   justify-content: start;
   font-size: 0.8em;
@@ -16,7 +16,17 @@
 }
 
 .closed {
-  background-color: lightgray;
+  background-image: linear-gradient(to bottom right, #e6004c, #660022 80%, gray);
+  box-shadow: 2px 2px gray;
+}
+
+.flagged {
+  background-image: linear-gradient(45deg, orange, wheat);
+  box-shadow: 2px 2px gray;
+  color: darkorange;
+  font-weight: bold;
+  animation-name: flagged;
+  animation-duration: 250ms;
 }
 
 .open {
@@ -24,10 +34,15 @@
   box-shadow: none;
   font-weight: bold;
   font-size: 14px;
+  animation-name: opened;
+  animation-duration: 250ms;
 }
 
 .exposed {
   background-color: red;
+  animation-name: exposed;
+  animation-duration: 1s;
+  animation-iteration-count: 5;
 }
 
 /* @media (prefers-color-scheme: dark) {
@@ -54,4 +69,53 @@
 
 .four {
   color: red
+}
+
+@keyframes exposed {
+  0% {
+    background-image: image(red);
+    color: yellow;
+    transform: rotate(15deg);
+  }
+
+  25% {
+    background-image: image(darkred);
+    color: yellow;
+    transform: rotate(45deg);
+  }
+
+  75% {
+    background-image: image(red);
+    color: yellow;
+    transform: rotate(15deg);
+  }
+
+  100% {
+    background-image: image(whitesmoke);
+    color: red;
+    transform: rotate(180deg);
+  }
+}
+
+@keyframes opened {
+  from {
+    background-image: linear-gradient(to bottom right, #e6004c, #660022 80%, gray);
+    transform: scale(0.75);
+  }
+
+  to {
+    background-image: image(white);
+    transform: scale(0.25);
+  }
+}
+
+@keyframes flagged {
+  from {
+    background-image: linear-gradient(to bottom right, #e6004c, #660022 80%, gray);
+    transform: scale(0.75);
+  }
+
+  to {
+    transform: scale(1);
+  }
 }
