--- a/vite-minesweeper/src/components/Wins/Wins.module.css
+++ b/vite-minesweeper/src/components/Wins/Wins.module.css
@@ -11,6 +11,8 @@
 .rank {
   font-size: 16px;
   margin-left: 10px;
+  min-width: 50px;
+  text-align: end;
 }
 
 .date {
@@ -21,11 +23,43 @@
   opacity: .6;
 }
 
+.modal {
+  position: fixed;
+  z-index: 1;
+  left: 10%;
+  top: 50px;
+  width: 700px;
+  height: 750px;
+  overflow: auto;
+  background-color: white;
+  opacity: .95;
+  border: 1px solid black;
+  border-radius: 8px;
+  box-shadow: 10px 10px gray;
+}
+
 .container {
+  margin-top: 20px;
   display: flex;
-  align-items: center;
+  flex-direction: column;
 }
 
 .noWins {
   font-size: 20px;
+}
+
+.winComponent {
+  display: flex;
+  align-items: center;
+  margin-left: 20px;
+  flex-direction: row;
+}
+
+.closeButton {
+  align-self: end;
+  margin-right: 25px;
+  margin-bottom: 20px;
+  font-size: 18px;
+  font-weight: bold;
+  cursor: pointer;
 }
