--- a/vite-minesweeper/src/App.css
+++ b/vite-minesweeper/src/App.css
@@ -1,66 +1,65 @@
 #root {
-  margin: 0 auto;
-  text-align: center;
-  font-size: 14px;
+    margin: 0 auto;
+    text-align: center;
+    font-size: 14px;
 }
 
 .board {
-  display: grid;
-  grid-template-columns: repeat(20, 1fr);
-  gap: 5px;
-  background-color: whitesmoke;
-  padding: 5px;
-  border-radius: 8px;
+    display: grid;
+    grid-template-columns: repeat(20, 1fr);
+    gap: 5px;
+    background-color: whitesmoke;
+    padding: 5px;
+    border-radius: 8px;
 }
 
 .gameOver {
-  opacity: 50%;
+    opacity: 50%;
 }
 
 .buttons {
-  margin-top: 10px;
-  background-image: linear-gradient(to right, darkcyan, rgb(18, 79, 79));
-  color: white;
-  border-radius: 8px;
-  box-shadow: 2px 2px slategray;
-  font-size: 14px;
-  opacity: .6;
-  margin-right: 20px;
+    margin-top: 10px;
+    background-image: linear-gradient(to bottom right, #e6004c, #660022 80%, gray);
+    color: white;
+    border-radius: 8px;
+    box-shadow: 2px 2px slategray;
+    font-size: 14px;
+    opacity: .6;
+    margin-right: 20px;
+    padding: 10px;
 }
 
 .buttons:hover {
-  opacity: 1;
+    opacity: 1;
 }
 
 .newGame:hover {
-  opacity: 1;
+    opacity: 1;
 }
 
 .newGame:active {
-  box-shadow: none;
+    box-shadow: none;
 }
 
 span {
-  margin-left: 5px;
+    margin-left: 5px;
 }
 
 .header {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 10px;
-  background-image: linear-gradient(to right, black, slategray, black);
-  color: white;
-  padding: 5px;
-  border-radius: 8px;
-  min-width: 605px;
+    display: flex;
+    justify-content: space-between;
+    background-image: linear-gradient(to right, black, slategray, black);
+    color: white;
+    padding: 5px;
+    min-width: 605px;
 }
 
 .boardContainer {
-  min-height: 615px;
-  flex: 1;
+    min-height: 615px;
+    flex: 1;
 }
 
 .buttonBar {
-  display: flex;
-  justify-content: center;
+    display: flex;
+    justify-content: center;
 }
