--- a/vite-minesweeper/src/components/StatusDialog/StatusDialog.module.css
+++ b/vite-minesweeper/src/components/StatusDialog/StatusDialog.module.css
@@ -11,6 +11,9 @@
     border: 1px solid black;
     border-radius: 8px;
     box-shadow: 10px 10px gray;
+    animation-name: opened;
+    animation-duration: 250ms;
+    animation-iteration-count: 3;
 }
 
 .container {
@@ -38,4 +41,29 @@
     margin-top: 20px;
     font-size: 20px;
     font-weight: bold;
+}
+
+.closing {
+    animation: closing;
+    animation-duration: 300ms;
+}
+
+@keyframes closing {
+    to {
+        transform: scale(0.1);
+    }
+}
+
+@keyframes opened {
+    0% {
+        transform: scale(1.1);
+    }
+
+    50% {
+        transform: scale(.95);
+    }
+
+    100% {
+        transform: scale(1.1);
+    }
 }
