--- a/vite-minesweeper/src/components/Wins/Wins.module.css
+++ b/vite-minesweeper/src/components/Wins/Wins.module.css
@@ -68,3 +68,14 @@
     font-size: 24px;
     margin-bottom: 10px;
 }
+
+.closing {
+    animation: closing;
+    animation-duration: 300ms;
+}
+
+@keyframes closing {
+    to {
+        transform: scale(0.1);
+    }
+}
