--- a/vite-minesweeper/src/components/Wins/Wins.module.css
+++ b/vite-minesweeper/src/components/Wins/Wins.module.css
@@ -19,23 +19,22 @@
     background-image: linear-gradient(to right, blue, black);
     color: white;
     border-radius: 20px;
-    padding: 10px 10px 10px 10px;
+    padding: 5px;
     opacity: .6;
 }
 
 .modal {
     position: fixed;
     z-index: 1;
-    left: 3rem;
+    left: 10px;
     top: 50px;
-    width: 700px;
-    height: 750px;
     overflow: auto;
     background-color: white;
     opacity: .95;
     border: 1px solid black;
     border-radius: 8px;
     box-shadow: 10px 10px gray;
+    width: 95%;
 }
 
 .container {
@@ -58,7 +57,7 @@
 .closeButton {
     align-self: end;
     margin-right: 25px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     font-size: 18px;
     font-weight: bold;
     cursor: pointer;
