--- a/vite-minesweeper/src/components/Cell/Cell.module.css
+++ b/vite-minesweeper/src/components/Cell/Cell.module.css
@@ -1,6 +1,8 @@
 .container {
-    width: 25px;
-    height: 25px;
+    /* width: 25px; */
+    /* height: 25px; */
+    width: 2rem;
+    height: 2rem;
     padding: 0;
     justify-content: start;
     font-size: 0.8em;
