--- a/vite-minesweeper/src/components/StatusDialog/StatusDialog.module.css
+++ b/vite-minesweeper/src/components/StatusDialog/StatusDialog.module.css
@@ -25,7 +25,7 @@
 }
 
 .closeButton {
-    align-self: end;
+    align-self: flex-end;
     margin-right: 25px;
     font-size: 18px;
     font-weight: bold;
