--- a/vite-minesweeper/src/components/Wins/Wins.module.css
+++ b/vite-minesweeper/src/components/Wins/Wins.module.css
@@ -38,7 +38,7 @@
 }
 
 .container {
-    margin-top: 20px;
+    margin-top: 10px;
     display: flex;
     flex-direction: column;
 }
@@ -56,10 +56,16 @@
 
 .closeButton {
     align-self: flex-end;
-    margin-right: 25px;
+    margin-right: 15px;
     font-size: 18px;
     font-weight: bold;
     cursor: pointer;
+    padding: 10px;
+}
+
+.closeButton:hover {
+    background-color: lightgray;
+    border-radius: 8px;
 }
 
 .title {
