--- a/vite-minesweeper/src/components/Wins/Wins.module.css
+++ b/vite-minesweeper/src/components/Wins/Wins.module.css
@@ -33,7 +33,7 @@
     opacity: .95;
     border: 1px solid black;
     border-radius: 8px;
-    box-shadow: 10px 10px gray;
+    box-shadow: 10px 10px 5px gray;
     width: 95%;
 }
 
