--- a/vite-minesweeper/src/components/Cell/Cell.module.css
+++ b/vite-minesweeper/src/components/Cell/Cell.module.css
@@ -43,8 +43,8 @@
 .exposed {
     background-color: red;
     animation-name: exposed;
-    animation-duration: 1s;
-    animation-iteration-count: 3;
+    animation-duration: 2s;
+    /* animation-iteration-count: 3; */
 }
 
 /* @media (prefers-color-scheme: dark) {
@@ -77,25 +77,25 @@
     0% {
         background-image: image(red);
         color: yellow;
-        transform: rotate(15deg) scale(0.5);
+        transform: scale(0.5);
     }
 
     25% {
         background-image: image(darkred);
         color: yellow;
-        transform: rotate(45deg) scale(1.2);
+        transform: rotate(180deg) scale(1.2);
     }
 
     75% {
         background-image: image(red);
         color: yellow;
-        transform: rotate(15deg) scale(0.5);
+        transform: scale(0.5);
     }
 
     100% {
         background-image: image(whitesmoke);
         color: red;
-        transform: rotate(180deg) scale(1.2);
+        transform: rotate(90deg) scale(1.2);
     }
 }
 
