--- a/vite-minesweeper/src/components/Wins/Wins.module.css
+++ b/vite-minesweeper/src/components/Wins/Wins.module.css
@@ -1,26 +1,34 @@
 .win {
-    padding: 10px;
+    padding: 5px;
     font-size: 16px;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     flex: 1;
 }
 
 .rank {
     font-size: 16px;
-    margin-left: 10px;
     min-width: 50px;
     text-align: end;
+    font-weight: bold;
+}
+
+.duration {
+    background-image: linear-gradient(to right, rgb(104, 107, 25), rgb(54, 56, 18));
+    padding: 5px;
+    border-radius: 4px;
+    color: white;
+    box-shadow: 5px 5px 10px gray;
 }
 
 .date {
-    background-image: linear-gradient(to right, blue, black);
+    background-image: linear-gradient(to right, rgb(20, 20, 83), rgb(110, 11, 144));
     color: white;
-    border-radius: 20px;
+    border-radius: 4px;
     padding: 5px;
-    opacity: .6;
+    box-shadow: 5px 5px 10px gray;
 }
 
 .modal {
@@ -29,12 +37,12 @@
     left: 10px;
     top: 50px;
     overflow: auto;
-    background-color: white;
+    background-color: rgb(236, 236, 200);
     opacity: .95;
     border-radius: 8px;
     box-shadow: 10px 10px 15px gray;
     width: 95%;
-    height: 80%;
+    height: 70%;
 }
 
 .container {
@@ -51,7 +59,13 @@
     display: flex;
     align-items: center;
     margin-left: 20px;
+    margin-right: 20px;
     flex-direction: row;
+    background-color: rgb(198, 216, 219);
+    border-radius: 4px;
+    border: solid 1px black;
+    margin-top: 5px;
+    opacity: 1;
 }
 
 .closeButton {
@@ -60,7 +74,7 @@
     font-size: 18px;
     font-weight: bold;
     cursor: pointer;
-    padding: 10px;
+    padding: 8px;
 }
 
 .closeButton:hover {
