--- a/vite-minesweeper/src/components/StatusDialog/StatusDialog.module.css
+++ b/vite-minesweeper/src/components/StatusDialog/StatusDialog.module.css
@@ -47,11 +47,12 @@
     animation-delay: 350ms;
     animation-iteration-count: 4;
     align-self: center;
+    margin-right: 10px;
 }
 
 .message {
     margin-top: 20px;
-    font-size: 20px;
+    font-size: 24px;
     font-weight: bold;
     flex-direction: row;
     display: flex;
@@ -61,6 +62,8 @@
 .text {
     align-self: center;
     margin-left: 5px;
+    text-shadow: 1px 1px 2px black, 0 0 25px rgb(180, 39, 48), 0 0 5px rgb(189, 27, 121);
+    color: white;
 }
 
 .closing {
