--- a/vite-minesweeper/src/components/Wins/Wins.module.css
+++ b/vite-minesweeper/src/components/Wins/Wins.module.css
@@ -85,8 +85,10 @@
 }
 
 .title {
-    font-size: 24px;
+    font-size: 28px;
     margin-bottom: 10px;
+    text-shadow: 1px 1px 2px black, 0 0 25px rgb(180, 39, 48), 0 0 5px rgb(189, 27, 121);
+    color: wheat;
 }
 
 .closing {
