--- a/vite-minesweeper/src/components/Wins/Wins.module.css
+++ b/vite-minesweeper/src/components/Wins/Wins.module.css
@@ -93,7 +93,7 @@
 
 .closing {
     animation: closing;
-    animation-duration: 250ms;
+    animation-duration: 500ms;
     visibility: hidden;
 }
 
@@ -112,11 +112,11 @@
 @keyframes opening {
     0% {
         top: -800px;
-        /* transform: scale(0.1); */
+        transform: scale(0.1);
     }
 
     100% {
         top: 5%;
-        /* transform: scale(1); */
+        transform: scale(1);
     }
 }
