--- a/minesweeper-gui/src/style.css
+++ b/minesweeper-gui/src/style.css
@@ -1,193 +1,219 @@
 container {
-  min-width: 25px;
-  min-height: 25px;
-  padding: 0;
+    min-width: 25px;
+    min-height: 25px;
+    padding: 0;
 }
 
 .cell {
-  border: 0;
+    border: 0;
 }
 
 .cell:active {
-  box-shadow: none;
+    box-shadow: none;
 }
 
 .container:hover {
-  opacity: 0.8;
+    opacity: 0.8;
 }
 
 .cell:hover {
-  opacity: 0.8;
+    opacity: 0.8;
 }
 
 .open {
-  background-image: image(white);
-  box-shadow: none;
-  color: black;
-  animation-name: opened;
-  animation-duration: 250ms;
+    background-image: image(white);
+    box-shadow: none;
+    color: black;
+    animation-name: opened;
+    animation-duration: 250ms;
 }
 
 .one {
-  color: blue;
+    color: blue;
 }
 
 .two {
-  color: green;
+    color: green;
 }
 
 .three {
-  color: purple;
+    color: purple;
 }
 
 .four {
-  color: red;
+    color: red;
 }
 
 .exposed {
-  background-image: image(whitesmoke);
-  font-weight: bold;
-  color: red;
-  animation-name: exposed;
-  animation-duration: 1s;
-  animation-iteration-count: 5;
+    background-image: image(whitesmoke);
+    font-weight: bold;
+    color: red;
+    animation-name: exposed;
+    animation-duration: 1s;
+    animation-iteration-count: 5;
 }
 
 .flagged {
-  background-image: linear-gradient(45deg, orange, wheat);
-  box-shadow: 2px 2px gray;
-  color: darkorange;
-  font-weight: bold;
-  animation-name: flagged;
-  animation-duration: 250ms;
+    background-image: linear-gradient(45deg, orange, wheat);
+    box-shadow: 2px 2px gray;
+    color: darkorange;
+    font-weight: bold;
+    animation-name: flagged;
+    animation-duration: 250ms;
 }
 
 .closed {
-  background-image: linear-gradient(to bottom right, #e6004c, #660022 80%, gray);
-  box-shadow: 2px 2px gray;
+    background-image: linear-gradient(to bottom right, #e6004c, #660022 80%, gray);
+    box-shadow: 2px 2px gray;
 }
 
 label.win {
-  font-weight: bold;
-  color: darkgreen;
+    font-weight: bold;
+    color: darkgreen;
 }
 
 label.lose {
-  font-weight: bold;
-  color: darkred;
+    font-weight: bold;
+    color: darkred;
 }
 
 .statusMessage {
-  margin-top: 50px;
+    margin-top: 50px;
 }
 
 grid {
-  padding: 15px 15px 15px 15px;
-  background-color: whitesmoke;
+    padding: 15px 15px 15px 15px;
+    background-color: whitesmoke;
 }
 
 .status_dialog {
-  padding: 15px 15px 15px 15px;
-  color: white;
-  background-color: black;
-  font-size: 20px;
-  border-radius: 10px;
+    padding: 15px 15px 15px 15px;
+    color: white;
+    background-color: black;
+    font-size: 20px;
+    border-radius: 10px;
 }
 
 .button {
-  margin-bottom: 10px;
-  background-image: image(darkred);
-  color: white;
+    margin-bottom: 10px;
+    background-image: image(darkred);
+    color: white;
 }
 
 .header {
-  margin-left: 15px;
-  margin-right: 15px;
-  font-size: 14px;
-  background-image: linear-gradient(to right, black, darkred 20%, black);
-  border-radius: 8px;
-  color: white;
-  padding: 10px;
-  box-shadow: 2px 2px gray;
+    margin-left: 15px;
+    margin-right: 15px;
+    font-size: 14px;
+    background-image: linear-gradient(to right, black, darkred 20%, black);
+    border-radius: 8px;
+    color: white;
+    padding: 10px;
+    box-shadow: 2px 2px gray;
 }
 
 .winHistory {
-  font-size: 16px;
-  background-image: linear-gradient(to right, wheat, lightgray);
-  color: black;
-  border-radius: 8px;
-  padding: 10px;
-  margin: 5px;
+    font-size: 16px;
+    background-image: linear-gradient(to right, wheat, lightgray);
+    color: black;
+    border-radius: 8px;
+    padding: 10px;
+    margin: 5px;
+    animation-name: opening;
+    animation-duration: 250ms;
 }
 
 .winHistoryHeader {
-  font-size: 20px;
-  color: white;
-  margin: 25px;
+    font-size: 20px;
+    color: white;
+    margin: 25px;
 }
 
 .winHistoryRank {
-  font-size: 20px;
-  min-width: 40px;
-  color: white;
+    font-size: 20px;
+    min-width: 40px;
+    color: white;
 }
 
 .winHistoryWindow {
-  background-image: linear-gradient(to bottom right, #e6004c, #660022 80%, gray);
+    background-image: linear-gradient(to bottom right, #e6004c, #660022 80%, gray);
 }
 
 .winHistoryButton {
-  margin-top: 10px;
-  background-image: image(black);
-  box-shadow: 2px 2px gray;
-  color: white;
+    margin-top: 10px;
+    background-image: image(black);
+    box-shadow: 2px 2px gray;
+    color: white;
 }
 
 @keyframes exposed {
-  0% {
-    background-image: image(red);
-    color: yellow;
-    transform: rotate(15deg);
-  }
+    0% {
+        background-image: image(red);
+        color: yellow;
+        transform: rotate(15deg);
+    }
 
-  25% {
-    background-image: image(darkred);
-    color: yellow;
-    transform: rotate(45deg);
-  }
+    25% {
+        background-image: image(darkred);
+        color: yellow;
+        transform: rotate(45deg);
+    }
 
-  75% {
-    background-image: image(red);
-    color: yellow;
-    transform: rotate(15deg);
-  }
+    75% {
+        background-image: image(red);
+        color: yellow;
+        transform: rotate(15deg);
+    }
 
-  100% {
-    background-image: image(whitesmoke);
-    color: red;
-    transform: rotate(180deg);
-  }
+    100% {
+        background-image: image(whitesmoke);
+        color: red;
+        transform: rotate(180deg);
+    }
 }
 
 @keyframes opened {
-  from {
-    background-image: linear-gradient(to bottom right, #e6004c, #660022 80%, gray);
-    transform: scale(0.75);
-  }
+    from {
+        background-image: linear-gradient(to bottom right, #e6004c, #660022 80%, gray);
+        transform: scale(0.75);
+    }
 
-  to {
-    background-image: image(white);
-    transform: scale(0.25);
-  }
+    to {
+        background-image: image(white);
+        transform: scale(0.25);
+    }
 }
 
 @keyframes flagged {
-  from {
-    background-image: linear-gradient(to bottom right, #e6004c, #660022 80%, gray);
-    transform: scale(0.75);
-  }
+    from {
+        background-image: linear-gradient(to bottom right, #e6004c, #660022 80%, gray);
+        transform: scale(0.75);
+    }
 
-  to {
-    transform: scale(1);
-  }
+    to {
+        transform: scale(1);
+    }
+}
+
+@keyframes closing {
+    from {
+        visibility: visible;
+    }
+
+    to {
+        /* transform: scale(0.1); */
+        visibility: hidden;
+        top: var(--wins-height);
+    }
+}
+
+@keyframes opening {
+    0% {
+        transform: scale(0.1);
+        top: var(--wins-height);
+    }
+
+    100% {
+        top: 5%;
+        transform: scale(1);
+    }
 }
