--- a/minesweeper-relm4/src/style.css
+++ b/minesweeper-relm4/src/style.css
@@ -1,6 +1,4 @@
 container {
-    min-width: 25px;
-    min-height: 25px;
     padding: 0;
 }
 
@@ -8,6 +6,8 @@ container {
     border: 0;
     min-width: 35px;
     min-height: 35px;
+    line-height: 10px;
+    padding: 0;
 }
 
 .cell:active {
